[package]
name = "mesh-generation"
version = "0.1.0"
authors = ["DaanA32 <daan32@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "graphics", "mesh", "procedural", "terrain"]
categories = ["rendering", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "0.6.0"
nalgebra = "0.18"