[package]
name = "mesh-generation"
version = "0.1.1"
authors = ["DaanA32 <daan32@gmail.com>"]
edition = "2018"
license = "MIT or Apache-2.0"
keywords = ["gamedev", "graphics", "mesh", "procedural", "terrain"]
categories = ["rendering", "game-development"]
description = "Mesh generation for terrain"
documentation = "https://docs.rs/mesh-generation"
repository = "https://github.com/DaanA32/mesh-generation"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noise = "0.6.0"
nalgebra = "0.18"

[lib]
name = "lib"
path = "src/lib.rs"
